force-app/main/default/objects/Service_Fee_Escalation_Config__c/Service_Fee_Escalation_Config__c.object-meta.xml
<CustomObject>
    <label>Service Fee Escalation Config</label>
    <nameField>
        <displayFormat>SFEC-{00000000}</displayFormat>
        <label>Service Fee Escalation Config</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Fee Escalation Configs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>