force-app/main/default/objects/Service_Fee_Escalation_Config__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <referenceTo>genesis__Applications__c</referenceTo>
    <relationshipLabel>Service Fee Escalation Configs</relationshipLabel>
    <relationshipName>Service_Fee_Escalation_Configs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>