force-app/main/default/objects/Service_Fee_Escalation_Config__c/fields/Application_Fee__c.field-meta.xml
<CustomField>
    <fullName>Application_Fee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Fee</label>
    <referenceTo>Application_Fee__c</referenceTo>
    <relationshipLabel>Service Fee Escalation Configs</relationshipLabel>
    <relationshipName>Service_Fee_Escalation_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>