force-app/main/default/objects/Service_Fee_Escalation_Config__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment</label>
    <referenceTo>genesis__Application_Equipment__c</referenceTo>
    <relationshipLabel>Service Fee Escalation Configs</relationshipLabel>
    <relationshipName>Service_Fee_Escalation_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>