force-app/main/default/objects/Service_Fee_Escalation_Config__c/fields/Escalate_Service_On__c.field-meta.xml
<CustomField>
    <fullName>Escalate_Service_On__c</fullName>
    <label>Escalate Service On</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Total Payment</fullName>
            </value>
            <value>
                <fullName>Service Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>