force-app/main/default/objects/Service_Fee_Escalation_Config__c/fields/Escalation_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Frequency__c</fullName>
    <label>Escalation Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ANNUAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>