force-app/main/default/objects/Service_Fee_Escalation_Config__c/fields/Escalation_Value__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Value__c</fullName>
    <label>Escalation Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>