force-app/main/default/objects/Service_Fee_Escalation_Config__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MONTHLY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>