force-app/main/default/objects/Service_Fee_Escalation_Config__c/fields/Is_Service_Escalate__c.field-meta.xml
<CustomField>
    <fullName>Is_Service_Escalate__c</fullName>
    <label>Is Service Escalate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>