force-app/main/default/objects/Service_Fee_Escalation_Config__c/fields/Selected_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Selected_Equipment__c</fullName>
    <label>Selected Equipment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>