force-app/main/default/objects/Service_Fee_Escalation_Config__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Escalate_Service_On__c</columns>
    <columns>Escalation_Frequency__c</columns>
    <columns>Frequency__c</columns>
    <columns>Escalation_Value__c</columns>
    <columns>Number_Of_Payments__c</columns>
    <columns>Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>